--- a/roles/ceph-mon/defaults/main.yml
+++ b/roles/ceph-mon/defaults/main.yml
@@ -55,7 +55,7 @@ ceph_mon_container_params:
     - -i={{ monitor_name }}
     - --mon-data=/var/lib/ceph/mon/{{ cluster }}-{{ monitor_name }}
     - --public-addr={{ _current_monitor_address }}
-    - --mon-initial-members={{ groups[mon_group_name] | join(',') }}
+    - --mon-initial-members={{ groups[mon_group_name] | map('extract', hostvars, 'ansible_facts') | map(attribute='hostname') | join(',') }}
 
 
 ###########
