--- a/roles/ceph-osd/defaults/main.yml
+++ b/roles/ceph-osd/defaults/main.yml
@@ -60,7 +60,7 @@ osd_auto_discovery: false
 
 # Encrypt your OSD device using dmcrypt
 # If set to True, no matter which osd_objecstore you use the data will be encrypted
-dmcrypt: true
+dmcrypt: false
 
 # Use ceph-volume to create OSDs from logical volumes.
 # lvm_volumes is a list of dictionaries.
