site: install mgrs with mons if sharing the same host
If mgr is meant to be installed on the mon host it needs to be installed in the same playbook as restart handlers might failed because of non-existance mgr

Signed-off-by: Seena Fallah <seenafallah@gmail.com>

--- a/site-container.yml.sample
+++ b/site-container.yml.sample
@@ -121,7 +121,7 @@
         name: ceph-mon
     - import_role:
         name: ceph-mgr
-      when: groups.get(mgr_group_name, []) | length == 0
+      when: groups.get(mgr_group_name, []) | length == 0 or mgr_group_name in group_names
 
 - hosts: mons
   gather_facts: false
