--- a/site.yml.sample
+++ b/site.yml.sample
@@ -116,7 +116,7 @@
         name: ceph-mon
     - import_role:
         name: ceph-mgr
-      when: groups.get(mgr_group_name, []) | length == 0
+      when: groups.get(mgr_group_name, []) | length == 0 or mgr_group_name in group_names
 
   post_tasks:
     - name: set ceph monitor install 'Complete'
