group_vars: resync samples with default values
2b72ea991d40fc12f277edd58825ce98f068e8c4 and
c8eeae243efac9ad894f3240a8a256b05336f75b have missed the resync.

This addresses that.

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/group_vars/mons.yml.sample
+++ b/group_vars/mons.yml.sample
@@ -63,7 +63,7 @@ dummy:
 #    - -i={{ monitor_name }}
 #    - --mon-data=/var/lib/ceph/mon/{{ cluster }}-{{ monitor_name }}
 #    - --public-addr={{ _monitor_addresses[inventory_hostname] }}
-#    - --mon-initial-members={{ groups[mon_group_name] | join(',') }}
+#    - --mon-initial-members={{ groups[mon_group_name] | map('extract', hostvars, 'ansible_facts') | map(attribute='hostname') | join(',') }}
 
 
 ###########
