--- a/group_vars/exporters.yml.sample
+++ b/group_vars/exporters.yml.sample
@@ -14,6 +14,7 @@ dummy:
 #ceph_exporter_addr: "0.0.0.0"
 #ceph_exporter_port: 9926
 #ceph_exporter_stats_period: 5  # seconds
+#ceph_exporter_prio_limit: 5
 
 ##########
 # DOCKER #
@@ -23,8 +24,10 @@ dummy:
 #ceph_exporter_container_params:
 #  args:
 #    - -f
+#    - -n=client.ceph-exporter
 #    - --sock-dir=/var/run/ceph
 #    - --addrs={{ ceph_exporter_addr }}
 #    - --port={{ ceph_exporter_port }}
 #    - --stats-period={{ ceph_exporter_stats_period }}
+#    - --prio-limit={{ ceph_exporter_prio_limit }}
 
