tests: various fixes in tox.ini
- the collection path isn't right
- vagrant_up.sh fails because the path isn't passed down
- increase the number of retries and delay for pytest

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/tox-external_clients.ini
+++ b/tox-external_clients.ini
@@ -12,7 +12,7 @@ allowlist_externals =
 passenv=*
 setenv=
   ANSIBLE_SSH_ARGS = -F {changedir}/vagrant_ssh_config -o ControlMaster=auto -o ControlPersist=600s -o PreferredAuthentications=publickey
-  ANSIBLE_COLLECTIONS_PATH = {envdir}
+  ANSIBLE_COLLECTIONS_PATH = {envdir}/ansible_collections
   ANSIBLE_CONFIG = {toxinidir}/ansible.cfg
   ANSIBLE_CALLBACK_ENABLED = profile_tasks
   ANSIBLE_CACHE_PLUGIN = memory
@@ -32,7 +32,7 @@ deps= -r{toxinidir}/tests/requirements.txt
 changedir={toxinidir}/tests/functional/external_clients{env:CONTAINER_DIR:}
 commands=
   ansible-galaxy collection install -r {toxinidir}/requirements.yml -v -p {envdir}/ansible_collections
-  bash {toxinidir}/tests/scripts/vagrant_up.sh --no-provision {posargs:--provider=virtualbox}
+  bash {toxinidir}/tests/scripts/vagrant_up.sh {changedir} --no-provision {posargs:--provider=virtualbox}
   bash {toxinidir}/tests/scripts/generate_ssh_config.sh {changedir}
 
   ansible-playbook -vv -i {changedir}/inventory {toxinidir}/tests/functional/setup.yml
