linter: address syntax errors
This fixes the following error:
```
syntax-check[specific]: The field 'hosts' has an invalid value, which
includes an undefined variable.
```

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/infrastructure-playbooks/shrink-rbdmirror.yml
+++ b/infrastructure-playbooks/shrink-rbdmirror.yml
@@ -22,7 +22,7 @@
 
 - name: confirm whether user really meant to remove rbd mirror from the ceph
         cluster
-  hosts: "{{ groups[mon_group_name][0] }}"
+  hosts: mons[0]
   become: true
   vars_prompt:
     - name: ireallymeanit
