ceph-config: check for set_radosgw_address before importing task
Signed-off-by: Seena Fallah <seenafallah@gmail.com>

--- a/roles/ceph-config/tasks/main.yml
+++ b/roles/ceph-config/tasks/main.yml
@@ -171,7 +171,9 @@
   ansible.builtin.import_role:
     name: ceph-facts
     tasks_from: set_radosgw_address.yml
-  when: inventory_hostname in groups.get(rgw_group_name, [])
+  when:
+    - set_radosgw_address | default(true)
+    - inventory_hostname in groups.get(rgw_group_name, [])
 
 - name: Generate Ceph file
   openstack.config_template.config_template:
