--- a/roles/ceph-container-common/tasks/main.yml
+++ b/roles/ceph-container-common/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Generate systemd ceph-mon target file
+- name: Generate systemd ceph target file
   ansible.builtin.copy:
     src: ceph.target
     dest: /etc/systemd/system/ceph.target
