--- a/roles/ceph-validate/tasks/check_repository.yml
+++ b/roles/ceph-validate/tasks/check_repository.yml
@@ -12,8 +12,8 @@
 
 - name: Validate ceph_repository_community
   ansible.builtin.fail:
-    msg: "ceph_stable_release must be 'squid'"
+    msg: "ceph_stable_release must be 'reef'"
   when:
     - ceph_origin == 'repository'
     - ceph_repository == 'community'
-    - ceph_stable_release not in ['squid']
+    - ceph_stable_release not in ['reef']
