replace main references with reef
Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/tox-subset_update.ini
+++ b/tox-subset_update.ini
@@ -29,7 +29,7 @@ setenv=
   container: PLAYBOOK = site-container.yml.sample
   non_container: PLAYBOOK = site.yml.sample
 
-  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-main
+  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-reef
   UPDATE_CEPH_DEV_BRANCH = main
   UPDATE_CEPH_DEV_SHA1 = latest
   ROLLING_UPDATE = True
