--- a/tox-rbdmirror.ini
+++ b/tox-rbdmirror.ini
@@ -32,7 +32,7 @@ setenv=
   container: CEPH_RBD_MIRROR_REMOTE_MON_HOSTS = 192.168.144.10
   non_container: CEPH_RBD_MIRROR_REMOTE_MON_HOSTS = 192.168.140.10
 
-  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-main
+  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-reef
   UPDATE_CEPH_DEV_BRANCH = main
   UPDATE_CEPH_DEV_SHA1 = latest
   ROLLING_UPDATE = True
