--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ commands=
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/rbd_map_devices.yml --extra-vars "\
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
       ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon-base} \
-      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-main} \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-reef} \
   "
 
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/{env:PURGE_PLAYBOOK:purge-cluster.yml} --extra-vars "\
@@ -54,7 +54,7 @@ commands=
       remove_packages=yes \
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
       ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon-base} \
-      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-main} \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-reef} \
   "
 
   # re-setup lvm, we exclude osd2 given this node uses lvm batch scenario (see corresponding inventory host file)
@@ -63,8 +63,6 @@ commands=
   # set up the cluster again
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars @ceph-override.json --extra-vars "\
       yes_i_know=true \
-      ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
-      ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
@@ -78,14 +76,12 @@ commands=
       ireallymeanit=yes \
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
       ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon-base} \
-      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-main} \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-reef} \
   "
 
   # set up the cluster again
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars @ceph-override.json --extra-vars "\
       yes_i_know=true \
-      ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
-      ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
@@ -108,8 +104,6 @@ commands=
   # set up the cluster again
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       yes_i_know=true \
-      ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
-      ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} \
   "
   # test that the cluster can be redeployed in a healthy state
   py.test --reruns 5 --reruns-delay 1 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={changedir}/{env:INVENTORY} --ssh-config={changedir}/vagrant_ssh_config {toxinidir}/tests/functional/tests
@@ -159,7 +153,7 @@ commands=
 commands=
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml --extra-vars "\
       ireallymeanit=yes \
-      ceph_docker_image_tag=latest-main-devel \
+      ceph_docker_image_tag=latest-reef-devel \
       ceph_docker_registry=quay.io \
       ceph_docker_image=ceph/daemon-base \
       ceph_docker_registry_auth=True \
@@ -178,8 +172,6 @@ commands=
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit mon1 {toxinidir}/tests/functional/setup.yml
   ansible-playbook -vv --diff -i {changedir}/hosts-2 {toxinidir}/infrastructure-playbooks/add-mon.yml --extra-vars "\
       ireallymeanit=yes \
-      ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
-      ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} \
       "
   py.test --reruns 5 --reruns-delay 1 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={changedir}/hosts-2 --ssh-config={changedir}/vagrant_ssh_config {toxinidir}/tests/functional/tests
 
@@ -189,8 +181,6 @@ commands=
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit mgrs {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       yes_i_know=true \
       ireallymeanit=yes \
-      ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
-      ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
@@ -203,8 +193,6 @@ commands=
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit mdss {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       yes_i_know=true \
       ireallymeanit=yes \
-      ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
-      ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
@@ -217,8 +205,6 @@ commands=
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit rbdmirrors {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       yes_i_know=true \
       ireallymeanit=yes \
-      ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
-      ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
@@ -231,8 +217,6 @@ commands=
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit rgws {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       yes_i_know=true \
       ireallymeanit=yes \
-      ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
-      ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
@@ -242,7 +226,7 @@ commands=
 [storage-inventory]
 commands=
   ansible-playbook -vv --diff -i {changedir}/hosts {toxinidir}/infrastructure-playbooks/storage-inventory.yml --extra-vars "\
-    ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-main} \
+    ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-reef} \
   "
 
 [cephadm-adopt]
@@ -292,11 +276,11 @@ setenv=
   shrink_rbdmirror: RBDMIRROR_TO_KILL = rbd-mirror0
   shrink_rgw: RGW_TO_KILL = rgw0.rgw0
 
-  CEPH_DOCKER_IMAGE_TAG = latest-main
-  CEPH_DOCKER_IMAGE_TAG_BIS = latest-bis-main
-  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-main
+  CEPH_DOCKER_IMAGE_TAG = latest-reef
+  CEPH_DOCKER_IMAGE_TAG_BIS = latest-bis-reef
+  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-reef
 
-  switch_to_containers: CEPH_DOCKER_IMAGE_TAG = latest-main-devel
+  switch_to_containers: CEPH_DOCKER_IMAGE_TAG = latest-reef-devel
 
 deps= -r{toxinidir}/tests/requirements.txt
 changedir=
@@ -342,8 +326,6 @@ commands=
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       no_log_on_ceph_key_tasks=false \
       yes_i_know=true \
-      ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
-      ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
@@ -359,7 +341,7 @@ commands=
   all_daemons,all_daemons_ipv6,collocation: py.test --reruns 20 --reruns-delay 3 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={changedir}/{env:INVENTORY} --ssh-config={changedir}/vagrant_ssh_config {toxinidir}/tests/functional/tests
 
   # handlers/idempotency test
-  all_daemons,all_daemon_ipv6,all_in_one,collocation: ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "no_log_on_ceph_key_tasks=false delegate_facts_host={env:DELEGATE_FACTS_HOST:True} ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG_BIS:latest-bis-main} ceph_dev_branch={env:CEPH_DEV_BRANCH:main} ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} yes_i_know=true" --extra-vars @ceph-override.json
+  all_daemons,all_daemon_ipv6,all_in_one,collocation: ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "no_log_on_ceph_key_tasks=false delegate_facts_host={env:DELEGATE_FACTS_HOST:True} yes_i_know=true" --extra-vars @ceph-override.json
 
   purge: {[purge]commands}
   purge_dashboard: {[purge-dashboard]commands}
