update: ignore linter errors on ceph-exporter systemd tasks
Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -1169,14 +1169,14 @@
       ansible.builtin.meta: end_play
       when: not containerized_deployment | bool
 
-    - name: Stop the ceph-exporter service
+    - name: Stop the ceph-exporter service  # noqa: ignore-errors
       ansible.builtin.systemd:
         name: "{{ 'ceph-exporter@' + ansible_facts['hostname'] if containerized_deployment | bool else 'ceph-exporter.service' }}"
         state: stopped
       ignore_errors: true
 
     # it needs to be done in a separate task otherwise the stop just before doesn't work.
-    - name: Mask and disable the ceph-exporter service
+    - name: Mask and disable the ceph-exporter service  # noqa: ignore-errors
       ansible.builtin.systemd:
         name: "{{ 'ceph-exporter@' + ansible_facts['hostname'] if containerized_deployment | bool else 'ceph-exporter.service' }}"
         enabled: false
