tests: update --ssh-config parameter (tox-update.ini)
Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/tox-update.ini
+++ b/tox-update.ini
@@ -76,6 +76,6 @@ commands=
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "
 
-  bash -c "CEPH_STABLE_RELEASE=reef py.test --reruns 5 --reruns-delay 1 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={changedir}/{env:INVENTORY} --ssh-config={changedir}/vagrant_ssh_config {toxinidir}/tests/functional/tests"
+  bash -c "CEPH_STABLE_RELEASE=reef py.test --reruns 5 --reruns-delay 1 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/hosts --ssh-config={envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/vagrant_ssh_config {toxinidir}/tests/functional/tests"
 
   vagrant destroy --force
