ceph-osd: introduce ec profile creation
RGW Pools can now use the existing ec profiles and rules created by ceph-osd role.

Signed-off-by: Seena Fallah <seenafallah@gmail.com>
(cherry picked from commit bbc1ba5c05d9a4444617e1777b10e127b345afb3)

--- a/group_vars/osds.yml.sample
+++ b/group_vars/osds.yml.sample
@@ -148,6 +148,8 @@ dummy:
 #  - "{{ crush_rule_hdd }}"
 #  - "{{ crush_rule_ssd }}"
 
+#ceph_ec_profiles: {}
+
 # Caution: this will create crush roots and racks according to hostvars {{ osd_crush_location }}
 # and will move hosts into them which might lead to significant data movement in the cluster!
 #
