--- a/roles/ceph-validate/tasks/check_rgw_pools.yml
+++ b/roles/ceph-validate/tasks/check_rgw_pools.yml
@@ -15,6 +15,7 @@
   when:
     - item.value.type is defined
     - item.value.type == 'ec'
+    - item.value.create_profile | default(true)
     - item.value.ec_k is undefined
 
 - name: Fail if ec_m is not set for ec pools
@@ -24,4 +25,5 @@
   when:
     - item.value.type is defined
     - item.value.type == 'ec'
+    - item.value.create_profile | default(true)
     - item.value.ec_m is undefined
