tests/upgrade: various changes
- use el8 image,
- disable nfs-ganesha testing

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/tox-update.ini
+++ b/tox-update.ini
@@ -21,8 +21,7 @@ setenv=
   ANSIBLE_STDOUT_CALLBACK = yaml
 #  non_container: DEV_SETUP = True
   # Set the vagrant box image to use
-  centos-non_container: CEPH_ANSIBLE_VAGRANT_BOX = centos/stream9
-  centos-container: CEPH_ANSIBLE_VAGRANT_BOX = centos/stream9
+  CEPH_ANSIBLE_VAGRANT_BOX = centos/stream8
 
   INVENTORY = {env:_INVENTORY:hosts}
   container: CONTAINER_DIR = /container
@@ -54,7 +53,7 @@ commands=
   # configure lvm, we exclude osd2 given this node uses lvm batch scenario (see corresponding inventory host file)
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/lvm_setup.yml --limit 'osds:!osd2'
 
-  ansible-playbook -vv --diff -i {envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/hosts {envdir}/tmp/ceph-ansible/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
+  ansible-playbook -vv --diff -i {envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/hosts {envdir}/tmp/ceph-ansible/{env:PLAYBOOK:site.yml.sample} --limit !nfs0 --extra-vars "\
       yes_i_know=true \
       delegate_facts_host={env:DELEGATE_FACTS_HOST:True} \
       container_package_name=podman \
@@ -76,6 +75,7 @@ commands=
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "
 
-  bash -c "CEPH_STABLE_RELEASE=reef py.test --reruns 5 --reruns-delay 1 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/hosts --ssh-config={envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/vagrant_ssh_config {toxinidir}/tests/functional/tests"
+  bash -c "CEPH_STABLE_RELEASE=reef py.test --reruns 5 --reruns-delay 1 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={changedir}/hosts --ssh-config={envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/vagrant_ssh_config {toxinidir}/tests/functional/tests"
+#  bash -c "CEPH_STABLE_RELEASE=reef py.test --reruns 5 --reruns-delay 1 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/hosts --ssh-config={envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/vagrant_ssh_config {toxinidir}/tests/functional/tests"
 
   vagrant destroy --force
