--- a/.mergify.yml
+++ b/.mergify.yml
@@ -49,6 +49,13 @@ pull_request_rules:
     conditions:
       - label=backport-stable-7.0
     name: backport stable-7.0
+  - actions:
+      backport:
+        branches:
+          - stable-8.0
+    conditions:
+      - label=backport-stable-8.0
+    name: backport stable-8.0
 commands_restrictions:
   backport:
     conditions:
