common: configure epel repository (rockylinux)
this is needed in order to make some libraries available when
running on RockyLinux

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>
(cherry picked from commit 867be7c35c1f10080f842c3c6bdd51062cfd788a)

--- a/roles/ceph-common/tasks/installs/configure_redhat_repository_installation.yml
+++ b/roles/ceph-common/tasks/installs/configure_redhat_repository_installation.yml
@@ -1,6 +1,15 @@
 ---
-- name: include redhat_community_repository.yml
-  include_tasks: redhat_community_repository.yml
+- name: Configure epel repository
+  ansible.builtin.package:
+    name: epel-release
+  register: result
+  until: result is succeeded
+  tags: with_pkg
+  when:
+    - ansible_facts['distribution'] == 'Rocky'
+
+- name: Include redhat_community_repository.yml
+  ansible.builtin.include_tasks: redhat_community_repository.yml
   when: ceph_repository == 'community'
 
 - name: include redhat_rhcs_repository.yml
