--- a/roles/ceph-common/tasks/installs/configure_redhat_repository_installation.yml
+++ b/roles/ceph-common/tasks/installs/configure_redhat_repository_installation.yml
@@ -1,4 +1,13 @@
 ---
+- name: Configure epel repository
+  ansible.builtin.package:
+    name: epel-release
+  register: result
+  until: result is succeeded
+  tags: with_pkg
+  when:
+    - ansible_facts['distribution'] == 'Rocky'
+
 - name: Include redhat_community_repository.yml
   ansible.builtin.include_tasks: redhat_community_repository.yml
   when: ceph_repository == 'community'
