ceph_default: stop using ceph/daemon-base
let's use reef tag quay.io/ceph/ceph instead of ceph/daemon-base

--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -471,7 +471,7 @@ dummy:
 ##########
 # DOCKER #
 ##########
-#ceph_docker_image: "ceph/daemon-base"
+#ceph_docker_image: "ceph/ceph"
 #ceph_docker_image_tag: latest-main
 #ceph_docker_registry: quay.io
 #ceph_docker_registry_auth: false
