ceph_default: Use vars cluster, setuser and setgroup for all daemons
Allow all daemons drop privilege themselves, except ceph-exporter

--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -489,6 +489,9 @@ ceph_common_container_params:
     - --default-log-to-file=false
     - --default-log-to-stderr=true
     - --default-log-stderr-prefix="debug "
+    - --cluster={{ cluster }}
+    - --setuser="{{ ceph_uid | int if containerized_deployment | bool else 'ceph' }}"
+    - --setgroup="{{ ceph_uid | int if containerized_deployment | bool else 'ceph' }}"
   volumes:
     - /var/lib/ceph/crash:/var/lib/ceph/crash:z
     - /var/run/ceph:/var/run/ceph:z
