--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -497,6 +497,9 @@ dummy:
 #    - --default-log-to-file=false
 #    - --default-log-to-stderr=true
 #    - --default-log-stderr-prefix="debug "
+#    - --cluster={{ cluster }}
+#    - --setuser="{{ ceph_uid | int if containerized_deployment | bool else 'ceph' }}"
+#    - --setgroup="{{ ceph_uid | int if containerized_deployment | bool else 'ceph' }}"
 #  volumes:
 #    - /var/lib/ceph/crash:/var/lib/ceph/crash:z
 #    - /var/run/ceph:/var/run/ceph:z
