--- a/roles/ceph-exporter/defaults/main.yml
+++ b/roles/ceph-exporter/defaults/main.yml
@@ -22,3 +22,6 @@ ceph_exporter_container_params:
     - --port={{ ceph_exporter_port }}
     - --stats-period={{ ceph_exporter_stats_period }}
     - --prio-limit={{ ceph_exporter_prio_limit }}
+    - --default-log-to-file=false
+    - --default-log-to-stderr=true
+    - --default-log-stderr-prefix="debug"
