ceph-container: keep run dir permission consistent
Make it the same as "Create ceph initial directories" task
and make owner and group 167 for containers so they can write
with ceph user.

Signed-off-by: Seena Fallah <seenafallah@gmail.com>

--- a/roles/ceph-container-common/tasks/prerequisites.yml
+++ b/roles/ceph-container-common/tasks/prerequisites.yml
@@ -28,7 +28,7 @@
 - name: Ensure tmpfiles.d is present
   ansible.builtin.lineinfile:
     path: /etc/tmpfiles.d/ceph-common.conf
-    line: "d /run/ceph 0770 root root -"
+    line: "d /run/ceph 0755 167 167 -"
     owner: root
     group: root
     mode: "0644"
