tests: collect mons and mgrs logs
Signed-off-by: Seena Fallah <seenafallah@gmail.com>
(cherry picked from commit 779a13eb31db10cff0ca315b9907ed68a6f480a1)

--- a/tests/functional/collect-logs.yml
+++ b/tests/functional/collect-logs.yml
@@ -49,6 +49,16 @@
       changed_when: false
       ignore_errors: true
 
+    - name: Get mon log
+      ansible.builtin.shell: journalctl -l -u ceph-mon@{{ ansible_facts['hostname'] }} > /var/log/ceph/ceph-mon.{{ ansible_facts['hostname'] }}.log
+      changed_when: false
+      when: inventory_hostname in groups.get(mon_group_name, [])
+
+    - name: Get mds log
+      ansible.builtin.shell: journalctl -l -u ceph-mds@{{ ansible_facts['hostname'] }} > /var/log/ceph/ceph-mon.{{ ansible_facts['hostname'] }}.log
+      changed_when: false
+      when: inventory_hostname in groups.get(mds_group_name, [])
+
     - name: Get mgr log
       ansible.builtin.shell: journalctl -l -u ceph-mgr@{{ ansible_facts['hostname'] }} > /var/log/ceph/ceph-mgr.{{ ansible_facts['hostname'] }}.log
       changed_when: false
