--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -485,6 +485,8 @@ ceph_common_container_params:
     CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
     TCMALLOC_MAX_TOTAL_THREAD_CACHE_BYTES: "{{ ceph_tcmalloc_max_total_thread_cache }}"
   args:
+    - --setuser=ceph
+    - --setgroup=ceph
     - --default-log-to-file=false
     - --default-log-to-stderr=true
     - --default-log-stderr-prefix="debug "
